// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should render correctly 1`] = `
<div>
  Test CTA feedback
  <div
    class="googlesitekit-opt-in"
  >
    <div
      class="mdc-form-field"
    >
      <div
        class="mdc-checkbox"
      >
        <input
          class="mdc-checkbox__native-control"
          id="googlesitekit-opt-in"
          name="optIn"
          type="checkbox"
          value="1"
        />
        <div
          class="mdc-checkbox__background"
        >
          <svg
            class="mdc-checkbox__checkmark"
            viewBox="0 0 12 9"
          >
            <path
              class="mdc-checkbox__checkmark-path"
              d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
              fill="none"
              stroke="none"
            />
          </svg>
          <div
            class="mdc-checkbox__mixedmark"
          />
        </div>
      </div>
      <label
        for="googlesitekit-opt-in"
      >
        <span>
          Help us improve Site Kit by sharing anonymous usage data.
        </span>
         
        <span>
          All collected data is treated in accordance with the 
          <a
            aria-label="Google Privacy Policy. (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://policies.google.com/privacy"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              Google Privacy Policy.
            </span>
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </span>
      </label>
      
    </div>
  </div>
  <div
    class="googlesitekit-start-setup-wrap"
  >
    <a
      class="mdc-button googlesitekit-start-setup mdc-button--raised"
      href="https://example.com/test-proxy-setup"
      role="button"
      target="_self"
    >
      <span
        class="mdc-button__label"
      >
        Sign in with Google
      </span>
    </a>
    Test in progress feedback
  </div>
</div>
`;

exports[`Actions should render the reset button when the site is resettable 1`] = `
<div>
  Test CTA feedback
  <div
    class="googlesitekit-opt-in"
  >
    <div
      class="mdc-form-field"
    >
      <div
        class="mdc-checkbox"
      >
        <input
          class="mdc-checkbox__native-control"
          id="googlesitekit-opt-in"
          name="optIn"
          type="checkbox"
          value="1"
        />
        <div
          class="mdc-checkbox__background"
        >
          <svg
            class="mdc-checkbox__checkmark"
            viewBox="0 0 12 9"
          >
            <path
              class="mdc-checkbox__checkmark-path"
              d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
              fill="none"
              stroke="none"
            />
          </svg>
          <div
            class="mdc-checkbox__mixedmark"
          />
        </div>
      </div>
      <label
        for="googlesitekit-opt-in"
      >
        <span>
          Help us improve Site Kit by sharing anonymous usage data.
        </span>
         
        <span>
          All collected data is treated in accordance with the 
          <a
            aria-label="Google Privacy Policy. (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://policies.google.com/privacy"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              Google Privacy Policy.
            </span>
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </span>
      </label>
      
    </div>
  </div>
  <div
    class="googlesitekit-start-setup-wrap"
  >
    <a
      class="mdc-button googlesitekit-start-setup mdc-button--raised"
      href="https://example.com/test-proxy-setup"
      role="button"
      target="_self"
    >
      <span
        class="mdc-button__label"
      >
        Sign in with Google
      </span>
    </a>
    Test in progress feedback
    <button
      class="googlesitekit-cta-link googlesitekit-reset-button"
    >
      <span
        class="googlesitekit-cta-link__contents"
      >
        Reset Site Kit
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions view-only button should render the button for a second admin when shared modules are available 1`] = `
<div>
  Test CTA feedback
  <div
    class="googlesitekit-opt-in"
  >
    <div
      class="mdc-form-field"
    >
      <div
        class="mdc-checkbox"
      >
        <input
          class="mdc-checkbox__native-control"
          id="googlesitekit-opt-in"
          name="optIn"
          type="checkbox"
          value="1"
        />
        <div
          class="mdc-checkbox__background"
        >
          <svg
            class="mdc-checkbox__checkmark"
            viewBox="0 0 12 9"
          >
            <path
              class="mdc-checkbox__checkmark-path"
              d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
              fill="none"
              stroke="none"
            />
          </svg>
          <div
            class="mdc-checkbox__mixedmark"
          />
        </div>
      </div>
      <label
        for="googlesitekit-opt-in"
      >
        <span>
          Help us improve Site Kit by sharing anonymous usage data.
        </span>
         
        <span>
          All collected data is treated in accordance with the 
          <a
            aria-label="Google Privacy Policy. (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://policies.google.com/privacy"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              Google Privacy Policy.
            </span>
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </span>
      </label>
      
    </div>
  </div>
  <div
    class="googlesitekit-start-setup-wrap"
  >
    <a
      class="mdc-button googlesitekit-start-setup mdc-button--raised"
      href="https://example.com/test-proxy-setup"
      role="button"
      target="_self"
    >
      <span
        class="mdc-button__label"
      >
        Sign in with Google
      </span>
    </a>
    Test in progress feedback
    <button
      class="mdc-button mdc-button--tertiary"
      target="_self"
    >
      <span
        class="mdc-button__label"
      >
        Skip sign-in and view limited dashboard
      </span>
    </button>
  </div>
</div>
`;
